[package]
name = "bingpaper"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
image = "0.24.6"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
widestring = "1.0.2"
winapi = { version = "0.3.9", features = ["winuser"] }
